monitoring/configs/production/grafana/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy
  namespace: monitoring
spec:
  tls:
    - hosts:
        - &host grafana.fanen.dk
